# Chinese2025

./: DictToList.py  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
Chinese2025/: Error.py  FanFangYan.py  FanGuangYun.py  FanNiYin.py  FanPingShuiYun.py  FanYongMingTi.py  Unicode.py  XianDaiYun.py  XiaoLiuRen.py  YongMingTi.py  ZhuShi.py  __init__.py  全局变量.py  单列查询.py  查询.py  注诗.py  注释.py  王力魏晉南北朝擬音搜索.py  现代韵书搜索.py  繁體平水韻搜索.py  繁體廣韻搜索.py  繁體擬音搜索.py  繁體方言搜索.py  繁體永明躰檢測.py
pre/: DictToList.py  XiaoLiuRen.py
