[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Chinese2025"
version = "1.0.0"
description = "一个关于中文的集合库，支持繁體廣韻搜索、繁體方言搜索、常見擬音搜索。"
readme = "README.md"
requires-python = ">=3.6, <4"
authors = [
    {name = "李岚霏", email = "yesandnoandperhaps@yesandnoandperhaps.cn"}
]
dependencies = []
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/yesandnoandperhaps/Chinese2025"
Homepage = "https://yesandnoandperhaps.cn/posts/59f94f23.html"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["Chinese2025"]
include-package-data = true

[tool.setuptools.package-data]
Chinese2025 = ["reconstructions_list.sqlite"]
